--- a/transacaoccs/.gitignore
+++ b/transacaoccs/.gitignore
@@ -1,14 +1,6 @@
 /**/*.iml
 /**/.idea/
-/contaclienteccs/target/**/
-/cliente-ccs/target/**/
-/cliente-ccs/target/
-/contaclienteccs/target/
-/contaclienteccs/target
-/cliente-ccs/target
-/transacaoccs/target
-/transacaoccs/target/
-/transacaoccs/target/**/
+/**/target/
 /**/build/
 /**/.gradle/
 /**/out/
