--- a/transacaoccs/src/main/resources/application.properties
+++ b/transacaoccs/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 server.port=8094
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/ccs-cliente
-spring.datasource.username=ryoshino
-spring.datasource.password=password
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ccs-cliente
+#spring.datasource.username=ryoshino
+#spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
