--- a/transacaoccs/src/main/resources/application.properties
+++ b/transacaoccs/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8094
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/ccs-cliente
-#spring.datasource.username=ryoshino
-#spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://localhost:5432/ccs-cliente
+spring.datasource.username=ryoshino
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
